# claude-monitor

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  biome.json  electrobun.config.ts  package.json  svelte.config.js  tsconfig.json  vite.config.js  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
native/macos/: ClaudeMonitorPopover.m
scripts/: build-macos-popover.ts  fix-electrobun-assets.ts  prebuild-electrobun.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  macos.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  auto_refresh.rs  commands.rs  credentials.rs  error.rs  history.rs  lib.rs  main.rs  notifications.rs  tray.rs  types.rs  validation.rs  wake_detection.rs
src-tauri/src/api/: claude.rs  codex.rs  ollama.rs
src-tauri/tests/: ollama_settings_sample.html
src/bun/: autoRefresh.ts  commands.ts  credentials.ts  errors.ts  history.ts  index.ts  notifications.ts  settings.ts  state.ts  time.ts  tray.ts  updates.ts  validation.ts
src/bun/native/: popover.ts
src/bun/platform/: autostart.ts
src/bun/providers/: claude.ts  codex.ts  index.ts  ollama.ts
src/lib/: bindings.generated.ts  electrobunClient.ts  historyStorage.ts  notifications.ts  secureStorage.ts  types.test.ts  types.ts
src/lib/components/: NotificationSettings.svelte  ToastContainer.svelte
src/lib/components/charts/: UsageLineChart.svelte
src/lib/composables/: index.ts  useAnalytics.svelte.ts  useAnalytics.test.ts  useSettings.svelte.ts  useSettings.test.ts  useToast.svelte.ts  useUpdates.svelte.ts  useUsageData.svelte.ts  useUsageData.test.ts
src/lib/utils/: debounce.ts  formatting.test.ts  formatting.ts  index.ts
src/routes/: +layout.ts  +page.svelte
src/shared/: types.ts
