[package]
name = "claude-monitor"
version = "0.1.1"
description = "Desktop app to monitor Claude API usage"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
rusqlite = { version = "0.38", features = ["bundled"] }
specta = { version = "2.0.0-rc.22", features = ["derive", "function", "serde", "tokio"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2.8.0"
log = "0.4.29"

# macOS-only: NSPopover for native popover behavior
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", version = "4.0.0" }

# Windows/Linux only: Positioner for tray-relative window positioning
[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
