[package]
name = "claude-monitor"
version = "0.1.5"
description = "Desktop app to monitor Claude API usage"
authors = ["Ivan Kachalkin<xikxp1@gmail.com>"]
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
tokio = { version = "1.51.1", features = ["full"] }
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
specta = { version = "2.0.0-rc.24", features = ["derive", "function", "tokio"] }
specta-typescript = "0.0.11"
tauri-specta = { version = "2.0.0-rc.24", features = ["typescript"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2"
tauri-plugin-log = "2.8.0"
log = "0.4.29"
rand = "0.10.1"
tauri-plugin-single-instance = "2.4.1"

# macOS-only: NSPopover for native popover behavior
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", version = "4.0.1" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSObject"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }

# Windows/Linux only: Positioner for tray-relative window positioning
[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
